# Chronos

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  chronos.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_chronos.db  test_vector_memory.py
agent/: core.py  tools.py
bot/: fsm.py  handlers.py  keyboards.py
chroma_data_test/: chroma.sqlite3
evaluation/: README.md  judge.py  run_evaluation.py  test_cases.py
memory/: db.py  vector.py
scheduler/: jobs.py
